Update file paths for uploads and add local data directory; configure Docker volumes and Next.js rewrites for image serving

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - web
     volumes:
       - /mnt/HC_Volume_103599864/projects/carart:/app/data
+      - /mnt/HC_Volume_103599864/projects/carart/uploads:/app/data/uploads
     ports:
       - "3000:3000"
 
